--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "paypal-rest-sdk": "^1.8.1",
     "promise-mysql": "^4.1.1",
     "twilio": "^3.42.2"
   },
@@ -29,6 +30,7 @@
     "@types/jsonwebtoken": "^8.3.9",
     "@types/morgan": "^1.9.0",
     "@types/multer": "^1.4.2",
+    "@types/paypal-rest-sdk": "^1.7.5",
     "@types/twilio": "^2.11.0",
     "@types/typescript": "^2.0.0",
     "nodemon": "^2.0.2"
