--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 ACOOUNT_SID = AC508d4956105a932dc27fa10147ad3068
 AUTH_TOKEN = 02decd8f90290bcd29a882e78e0a453c
 MY_NUMBER_PHONE = whatsapp:+593995078151
+ENVIROMENT_DEV = http://localhost:3000
