Modificando llaves de seguridad

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
+DB_HOST = localhost
+DB_USER = root
+DB_PASS = 12345
+DB_NAME = eurekakits
 ACOOUNT_SID = AC508d4956105a932dc27fa10147ad3068
 AUTH_TOKEN = 02decd8f90290bcd29a882e78e0a453c
 MY_NUMBER_PHONE = whatsapp:+593995078151
