--- a/.env
+++ b/.env
@@ -1,7 +1,11 @@
-DB_HOST = localhost
-DB_USER = root
-DB_PASS = 12345
-DB_NAME = eurekakits
+DB_HOST_D = localhost
+DB_USER_D = root
+DB_PASS_D = 12345
+DB_NAME_D = eurekakits
+DB_HOST_P = bl8lar3zrndtt8sgnjxe-mysql.services.clever-cloud.com
+DB_USER_P = usyb80oqvcmbsrnj
+DB_PASS_P = JtMGPjeZ4ph3V0tKozUe
+DB_NAME_P = bl8lar3zrndtt8sgnjxe
 ACOOUNT_SID = AC508d4956105a932dc27fa10147ad3068
 AUTH_TOKEN = 02decd8f90290bcd29a882e78e0a453c
 MY_NUMBER_PHONE = whatsapp:+593995078151
